--- a/resources/nuls/localization/strings.properties
+++ b/resources/nuls/localization/strings.properties
@@ -2,5 +2,7 @@
 toolwindow.action.add.node=Add Node
 toolwindow.action.add.account=Add Account
 toolwindow.action.add.contract=Add Contract
+toolwindow.action.del=Delete...
+toolwindow.action.del.item=Delete selected item
 toolwindow.action.run=Contacts
 toolwindow.action.log=Logs
