nuls contract idea plugin resource

--- a/resources/nuls/localization/strings.properties
+++ b/resources/nuls/localization/strings.properties
@@ -6,3 +6,4 @@ toolwindow.action.del=Delete...
 toolwindow.action.del.item=Delete selected item
 toolwindow.action.run=Contacts
 toolwindow.action.log=Logs
+toolwindow.action.package=Package
